<resources>
    <string name="app_name">FastCart</string>
    <string name="statusList">Status</string>
    <string name="priorityList">Priority</string>
    <string name="dateList">Date</string>
    <string name="titleDetailsList">Title</string>
    <string name="introducir_textTitle">Shopping list</string>
    <string name="statusText">Status</string>
    <string name="pendiente">Pending</string>
    <string name="realizado">Done</string>

    <string name="timeAndDateText">Date</string>
    <string name="noDate"> date</string>
    <string name="noTime"> time</string>
    <string name="chooseDate">Choose date</string>
    <string name="chooseAliments">Choose aliments</string>

    <string name="chooseTime">Choose time</string>

    <string name="cancelButton">Cancel </string>
    <string name="resetButton">Reset </string>
    <string name="submitButton">Save </string>
    <string name="search">search</string>


    <string name="username">Username</string>
    <string name="numAlimentos">Aliments number</string>
    <string name="changeColor">Change Color</string>
    <string name="OptionsColorChange">Options to change </string>
    <string name="blue">Blue </string>
    <string name="green">Green </string>
    <string name="red">Red </string>
    <string name="notColor"> Not Color </string>



</resources>
