<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Title -->
    <TextView
        android:id="@+id/TitleIdDetailsList"
        android:layout_width="104dp"
        android:layout_height="42dp"
        android:text="@string/titleDetailsList"
        android:textAppearance="?android:attr/textAppearanceLarge">

    </TextView>


    <EditText
        android:id="@+id/titleIntroducirId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TitleLabel"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/introducir_textTitle"
        android:inputType="textShortMessage"
        tools:ignore="UnknownId">

        <requestFocus />

    </EditText>


    <!-- Status -->

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_marginTop="70dp"
        android:text="@string/statusText"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <RadioGroup
        android:id="@+id/statusGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/status"
        android:orientation="horizontal"
        android:layout_marginTop="12dp" >

        <RadioButton
            android:id="@+id/statusDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pendiente" />

        <RadioButton
            android:id="@+id/statusNotDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/realizado" />


    </RadioGroup>

    <!-- Time and Date -->

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_marginTop="160dp"
        android:text="@string/timeAndDateText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/time_and_date"
        android:layout_marginTop="12dp"
        android:text="@string/noDate" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/time_and_date"
        android:text="@string/noTime" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/date"
        android:text="@string/chooseDate" />

    <Button
        android:id="@+id/selectAliment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="92dp"
        android:text="@string/chooseAliments" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/date_picker_button"
        android:layout_below="@id/time"
        android:text="@string/chooseTime" />


    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancelButton" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/resetButton" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submitButton" />


</RelativeLayout>