<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorbackground"
    android:id="@+id/fondo"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <LinearLayout
        android:id="@+id/changeColorL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/changeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2sp"
            android:paddingRight="2sp"
            android:text="@string/changeColor"
            android:textSize="17sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2sp"
                android:paddingRight="2sp"
                android:text="@string/OptionsColorChange"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/statusGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:orientation="vertical"
                android:layout_marginTop="100dp" >


                <RadioButton
                    android:id="@+id/statusBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingLeft="2sp"
                    android:paddingRight="2sp"
                    android:text="@string/blue" />

                <RadioButton
                    android:id="@+id/statusGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:paddingLeft="2sp"
                    android:paddingRight="2sp"
                    android:text="@string/green" />

                <RadioButton
                    android:id="@+id/statusRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:paddingLeft="2sp"
                    android:paddingRight="2sp"
                    android:text="@string/red" />

                <RadioButton
                    android:id="@+id/statusNoColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:paddingLeft="2sp"
                    android:paddingRight="2sp"
                    android:text="@string/notColor" />


            </RadioGroup>

        </LinearLayout>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_save"
            app:backgroundTint="#008577"
            android:layout_marginTop="50dp"
            android:text="@string/submitButton" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_cancel"
            app:backgroundTint="#008577"
            android:text="@string/cancelButton" />



    </LinearLayout>








</LinearLayout>